add hw info and lec04 helper solutions

--- a/HW_Info.html
+++ b/HW_Info.html
@@ -82,9 +82,13 @@ h2 {
 
 h3 {
   font-size: 24px;
-     color:#00b359;
+     color:#6b8e23;
 }
 
+h4 {
+  font-size: 18px;
+  color:#2E8B57;
+}
 
 h5 {
   font-size: 14px;
@@ -120,11 +124,20 @@ border: 1px solid black;}
 
 
 </style>
-<p>Navbar: <a href="../index.html">[Home]</a> <a href="../Schedule.html">[Schedule]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
+<p>Navbar: <a href="index.html">[Home]</a> <a href="Schedule.html">[Schedule]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
+<div id="posted-solutions" class="section level2">
+<h2>Posted Solutions</h2>
+<p>This is where I will post homework solutions (full and partial), and some helper code.</p>
+<ul>
+<li>Data Wrangling Solutions <a href="notes/solutions/ch3_solutions.html">Ch3_solutions</a></li>
+<li>Simple Linear regression <a href="notes/solutions/ch6_solutions.html">Ch6_solutions</a></li>
+<li>Plotting help for spline predictions <a href="notes/solutions/Lec04_solutions.html">Lec04_solutions</a></li>
+</ul>
+</div>
 <div id="how-to-submit-homework" class="section level2">
 <h2>How to submit homework</h2>
 <ul>
-<li>Homework will be submitted approximately every other week.</li>
+<li>Homework will be submitted through BBLearn approximately every other week.</li>
 <li>The file name of your submission should follow this format: <em>userid_assigment</em>
 <ul>
 <li>For example my markdown document for chapter 3 would be <em>rdonatello_ch3.Rmd</em></li>
@@ -149,6 +162,9 @@ border: 1px solid black;}
 <li>1 pt for a complete assignment.</li>
 </ul></li>
 </ul>
+</div>
+<div id="grading-rubric" class="section level2">
+<h2>Grading Rubric</h2>
 <table>
 <thead>
 <tr class="header">
