--- a/Schedule.html
+++ b/Schedule.html
@@ -122,7 +122,7 @@ border: 1px solid black;}
 
 
 </style>
-<p>Navbar: <a href="index.html">[Home]</a> <a href="./data/Datasets.html">[Data]</a> <a href="./admin/rubric.html">[HW Rubric]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
+<p>Navbar: <a href="index.html">[Home]</a> <a href="./data/Datasets.html">[Data]</a> <a href="HW_Info.html">[HW Info]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
 <!-- unholy hack to make following two tables less wide and the same wide -->
 <style type="text/css">
 table {
@@ -283,8 +283,8 @@ table {
 <tr class="odd">
 <td align="left">03/04</td>
 <td align="left">F</td>
-<td align="left">wk06: Dimension Reduction - PCA</td>
-<td align="left">lec06_DimReduction</td>
+<td align="left">wk06: Expanding the consulting model</td>
+<td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
@@ -292,7 +292,7 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Quiz 3 - lec05/06</td>
+<td align="left">Quiz 3 - lec05</td>
 </tr>
 <tr class="odd">
 <td align="left">03/07</td>
@@ -304,7 +304,7 @@ table {
 <tr class="even">
 <td align="left">03/09</td>
 <td align="left">W</td>
-<td align="left">wk07: Dimension reduction - FA</td>
+<td align="left">wk07: Exam Review</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -313,7 +313,7 @@ table {
 <td align="left">F</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Exam 1 - Lec01 - 06</td>
+<td align="left">Exam 1: Lec01 - 05</td>
 </tr>
 <tr class="even">
 <td align="left">03/14</td>
@@ -325,8 +325,8 @@ table {
 <tr class="odd">
 <td align="left">03/21</td>
 <td align="left">M</td>
-<td align="left">wk09: Discriminant Analysis</td>
-<td align="left">-</td>
+<td align="left">wk09: Dimension Reduction</td>
+<td align="left">lec06_DimReduction</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
