--- a/wk07.html
+++ b/wk07.html
@@ -130,7 +130,7 @@ border: 1px solid black;}
 <div id="announcements" class="section level2">
 <h2>Announcements</h2>
 <ul>
-<li>Quiz on variable selection and PCA due Monday @ 12</li>
+<li>Quiz on variable selection due Monday @ 12</li>
 </ul>
 <div id="notes-and-materials" class="section level3">
 <h3>Notes and Materials</h3>
@@ -138,16 +138,16 @@ border: 1px solid black;}
 <div id="monday-3716" class="section level3">
 <h3>Monday 3/7/16</h3>
 <ul>
-<li>Dimension reduction - Factor Analysis</li>
+<li>Consulting visit by Dr. Downing
+<ul>
+<li>7 minute presentations on analysis results</li>
+</ul></li>
 </ul>
 </div>
 <div id="wednesday-3916" class="section level3">
 <h3>Wednesday 3/9/16</h3>
 <ul>
-<li>Consulting visit by Dr. Downing
-<ul>
-<li>7 minute presentations on analysis results</li>
-</ul></li>
+<li>Exam review</li>
 </ul>
 </div>
 <div id="friday-31116" class="section level3">
