link up notes to wk06

--- a/wk06.html
+++ b/wk06.html
@@ -130,12 +130,12 @@ border: 1px solid black;}
 <div id="announcements" class="section level2">
 <h2>Announcements</h2>
 <ul>
-<li>Homework #3 due by midnight</li>
+<li>Homework #3 due by midnight Sunday 2/28</li>
 </ul>
 <div id="notes-and-materials" class="section level3">
 <h3>Notes and Materials</h3>
 <ul>
-<li>Lec 05: Variable Selection <a href="notes/">[PDF]</a><a href="notes/">[HTML]</a></li>
+<li>Lec 05: Variable Selection <a href="notes/lec05_Variable_Selection.pdf">[PDF]</a><a href="notes/lec05_Variable_Selection.html">[HTML]</a></li>
 </ul>
 </div>
 </div>
@@ -147,16 +147,30 @@ border: 1px solid black;}
 <li>Variable selection: Manual and Automated</li>
 </ul>
 </div>
+<div id="tuesday-31---due-by-eod" class="section level3">
+<h3>Tuesday 3/1 - Due by EOD</h3>
+<ol style="list-style-type: decimal">
+<li>Choose a priority question regarding model building with respect to the recruitment model.
+<ul>
+<li>The list of questions you came up with last week can be found on the <a href="https://docs.google.com/a/mail.csuchico.edu/document/d/1JX_Gh90khCbhvACaA6_-xjt6otSrXmF58HykfIz4kZc/edit?usp=sharing">Model Building</a> Google Doc.</li>
+</ul></li>
+<li>Post this qustion on the BBLearn forum.<br />
+<strong>Due by Friday EOD</strong> Review and think about your, and other’s priority questions. Comment (which could include trying to answer the question) on at least 6 of your classmates questions.</li>
+</ol>
+</div>
 <div id="wednesday-3216" class="section level3">
 <h3>Wednesday 3/2/16</h3>
 <ul>
-<li>Variable selection: Penalized functions</li>
+<li>Model building practice</li>
+<li>Working on expanding your consulting model to include other variables.<br />
+</li>
+<li>Consult with other groups - Combine models?</li>
 </ul>
 </div>
 <div id="friday-3416" class="section level3">
 <h3>Friday 3/4/16</h3>
 <ul>
-<li>Working on expanding your consulting model and writing a final report for Dr. Downing.</li>
+<li>Finalize model and start writing clean report for Dr. Downing.</li>
 <li><strong>Extra Credit</strong> Attend the Department colloqium talk from 3-4pm. Dr. Shemra Rizzo from UC Riverside will be here to give an Applied Statistics seminar.</li>
 </ul>
 </div>
