fixed hw solution links

--- a/HW_Info.html
+++ b/HW_Info.html
@@ -130,7 +130,8 @@ border: 1px solid black;}
 <p>This is where I will post homework solutions (full and partial), and some helper code.</p>
 <ul>
 <li>Data Wrangling Solutions <a href="notes/solutions/ch3_solutions.html">Ch3_solutions</a></li>
-<li>Simple Linear regression <a href="notes/solutions/SLR_solutions.html">Ch6_solutions</a></li>
+<li>Simple Linear regression <a href="notes/solutions/SLR_solutions.html">SLR_solutions</a></li>
+<li>Multiple Linear regression <a href="notes/solutions/MLR_solutions.html">MLR_solutions</a></li>
 <li>Plotting help for spline predictions <a href="notes/solutions/Lec04_solutions.html">Lec04_solutions</a></li>
 </ul>
 </div>
