add project 1 documentation, adjust schedule

--- a/Schedule.html
+++ b/Schedule.html
@@ -292,14 +292,14 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Quiz 3 - lec05</td>
+<td align="left">HW due: Variable Selection</td>
 </tr>
 <tr class="odd">
 <td align="left">03/07</td>
 <td align="left">M</td>
 <td align="left"><a href="wk07.html">wk07:</a> Consulting - Visit by Dr. Downing</td>
-<td align="left">-</td>
-<td align="left">-</td>
+<td align="left"><a href="notes/Recruitment_Data_Analysis.html">Recruitment_Data_Analysis</a></td>
+<td align="left">Final Consulting Report</td>
 </tr>
 <tr class="even">
 <td align="left">03/09</td>
@@ -325,7 +325,7 @@ table {
 <tr class="odd">
 <td align="left">03/21</td>
 <td align="left">M</td>
-<td align="left">wk09: Dimension Reduction</td>
+<td align="left">wk09: Dimension Reduction - PCA</td>
 <td align="left">lec06_DimReduction</td>
 <td align="left">-</td>
 </tr>
@@ -344,59 +344,73 @@ table {
 <td align="left">-</td>
 </tr>
 <tr class="even">
+<td align="left">03/27</td>
+<td align="left">Su</td>
+<td align="left">-</td>
+<td align="left">-</td>
+<td align="left">Hw</td>
+</tr>
+<tr class="odd">
 <td align="left">03/28</td>
 <td align="left">M</td>
 <td align="left">wk10: Discriminant Analysis</td>
-<td align="left">-</td>
+<td align="left">Afifi Ch 11</td>
 <td align="left">-</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">03/30</td>
 <td align="left">W</td>
 <td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">04/01</td>
 <td align="left">F</td>
 <td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">04/04</td>
 <td align="left">M</td>
-<td align="left">wk11: Two-way tables - Odds Ratios</td>
+<td align="left">wk11: Cluster Analysis</td>
+<td align="left">Afifi Ch 16</td>
+<td align="left">Quiz</td>
+</tr>
+<tr class="odd">
+<td align="left">04/06</td>
+<td align="left">W</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
-<td align="left">04/06</td>
-<td align="left">W</td>
-<td align="left">wk11: Chi-square tests</td>
+<td align="left">04/08</td>
+<td align="left">F</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
-<td align="left">04/08</td>
-<td align="left">F</td>
-<td align="left">wk11: Logistic Regression - Intro</td>
-<td align="left">M&amp;M Exercise</td>
+<td align="left">04/10</td>
+<td align="left">Su</td>
 <td align="left">-</td>
+<td align="left">-</td>
+<td align="left">Hw</td>
 </tr>
 <tr class="even">
 <td align="left">04/11</td>
 <td align="left">M</td>
-<td align="left">wk12: Logistic Regression - Model fit, predictions</td>
+<td align="left">wk12: Two-way tables, Odds Ratios, Chi-squared tests</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/13</td>
 <td align="left">W</td>
-<td align="left">-</td>
-<td align="left">-</td>
+<td align="left">wk12: Logistic Regression</td>
+<td align="left">Afifi Ch 12</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
@@ -409,9 +423,9 @@ table {
 <tr class="odd">
 <td align="left">04/18</td>
 <td align="left">M</td>
-<td align="left">wk13: Generalized Linear Models</td>
+<td align="left">wk13: CART / Random Forests</td>
 <td align="left">-</td>
-<td align="left">-</td>
+<td align="left">Quiz</td>
 </tr>
 <tr class="even">
 <td align="left">04/20</td>
@@ -428,65 +442,79 @@ table {
 <td align="left">-</td>
 </tr>
 <tr class="even">
-<td align="left">04/25</td>
-<td align="left">M</td>
-<td align="left">wk14: CART / Random Forests</td>
+<td align="left">04/24</td>
+<td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
+<td align="left">HW</td>
 </tr>
 <tr class="odd">
+<td align="left">04/25</td>
+<td align="left">M</td>
+<td align="left">wk14: Correlated Outcomes Analysis</td>
+<td align="left">Afifi Ch 18</td>
+<td align="left">-</td>
+</tr>
+<tr class="even">
 <td align="left">04/27</td>
 <td align="left">W</td>
 <td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">04/29</td>
 <td align="left">F</td>
 <td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">05/02</td>
 <td align="left">M</td>
 <td align="left">wk15: Missing Data - Identification and Imputations</td>
 <td align="left">Afifi Ch 9.2, Harrell Ch3</td>
-<td align="left">-</td>
+<td align="left">Quiz</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">05/04</td>
 <td align="left">W</td>
 <td align="left">wk15: Missing Data - MICE</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">05/06</td>
 <td align="left">F</td>
 <td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
+<tr class="odd">
+<td align="left">05/08</td>
+<td align="left">Su</td>
+<td align="left">-</td>
+<td align="left">-</td>
+<td align="left">HW</td>
+</tr>
 <tr class="even">
 <td align="left">05/09</td>
 <td align="left">M</td>
-<td align="left">-</td>
+<td align="left">wk16: Project 2 work</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">05/11</td>
 <td align="left">W</td>
-<td align="left">-</td>
+<td align="left">wk16: Wrap-up</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">05/13</td>
 <td align="left">F</td>
-<td align="left">-</td>
+<td align="left">wk16: Exam Review</td>
 <td align="left">-</td>
 <td align="left">Project 2</td>
 </tr>
