--- a/notes/lec05_Variable_Selection.html
+++ b/notes/lec05_Variable_Selection.html
@@ -181,7 +181,7 @@ border: 1px solid black;}
 
 
 </style>
-<p>Navbar: <a href="../index.html">[Home]</a> <a href="../Schedule.html">[Schedule]</a> <a href="../data/Datasets.html">[Data]</a> <a href="../wk06.html">[Week 6 Overview]</a> <a href="../HW%20Info.html">[HW Info]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
+<p>Navbar: <a href="../index.html">[Home]</a> <a href="../Schedule.html">[Schedule]</a> <a href="../data/Datasets.html">[Data]</a> <a href="../wk06.html">[Week 6 Overview]</a> <a href="../HW_Info.html">[HW Info]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
 <div id="introduction" class="section level1">
 <h1>Introduction</h1>
 <p>Variable selection methods are used mainly in exploratory situations where many independent variables have been measured and a final model explaining the dependent variable has not been reached.</p>
