finalize lec04 solutions

--- a/data/dm_depress.html
+++ b/data/dm_depress.html
@@ -84,7 +84,7 @@ img {
 </ul>
 <pre class="r"><code>depress$MARITAL &lt;- factor(depress$MARITAL, 
                           labels = c(&quot;Never Married&quot;, &quot;Married&quot;, &quot;Divorced&quot;, &quot;Separated&quot;, &quot;Widowed&quot;))
-depress$EDUCAT2 &lt;- factor(depress$EDUCAT, 
+depress$EDUCAT &lt;- factor(depress$EDUCAT, 
                           labels = c(&quot;&lt;HS&quot;, &quot;Some HS&quot;, &quot;HS Grad&quot;, &quot;Some college&quot;, &quot;BS&quot;, &quot;MS&quot;, &quot;PhD&quot;))</code></pre>
 </div>
 <div id="edits-and-recodes" class="section level1">
