finish and link dimension reduction lecture

--- a/wk09.html
+++ b/wk09.html
@@ -131,24 +131,33 @@ border: 1px solid black;}
 <h2>Announcements</h2>
 <div id="notes-and-materials" class="section level3">
 <h3>Notes and Materials</h3>
+<ul>
+<li>Lec 06: Dimension Reduction <a href="notes/lec06_DimensionReduction.pdf">[PDF]</a><a href="notes/lec06_DimensionReduction.html">[HTML]</a></li>
+</ul>
 </div>
 <div id="monday-32116" class="section level3">
 <h3>Monday 3/21/16</h3>
+<ul>
+<li>Discuss PCA</li>
+</ul>
 </div>
 <div id="wednesday-32316" class="section level3">
 <h3>Wednesday 3/23/16</h3>
+<ul>
+<li>Work on PCA Homework</li>
+</ul>
 </div>
 <div id="friday-32516" class="section level3">
 <h3>Friday 3/25/16</h3>
 <ul>
-<li><strong>Extra Credit</strong> Attend the Department colloqium talk from 3-4pm.<br />
- Dr. Matt Jans from the UCLA Center for Health Policy Research is here to give a talk titled <strong><em>“Item missing data and potential miscategorization with sexual orientation and partner sex questions: Language and cultural differences”</em></strong></li>
+<li><p>Discuss Discrimenant Analysis</p></li>
+<li><p><strong>Extra Credit</strong> Attend the Department colloqium talk from 3-4pm.<br />
+ Dr. Matt Jans from the UCLA Center for Health Policy Research is here to give a talk titled <strong><em>“Item missing data and potential miscategorization with sexual orientation and partner sex questions: Language and cultural differences”</em></strong></p></li>
 </ul>
 </div>
 </div>
 <div id="looking-ahead" class="section level2">
 <h2>Looking Ahead</h2>
-<p>Spring Break!</p>
 </div>
 
 
