--- a/wk10.html
+++ b/wk10.html
@@ -126,28 +126,32 @@ border: 1px solid black;}
 
 
 </style>
-<p><a href="Schedule.html">[Schedule]</a> <a href="wk09.html">[Week 7]</a> <a href="wk11.html">[Week 10]</a></p>
+<p><a href="Schedule.html">[Schedule]</a> <a href="wk09.html">[Week 9]</a> <a href="wk11.html">[Week 11]</a></p>
 <div id="announcements" class="section level2">
 <h2>Announcements</h2>
 <div id="notes-and-materials" class="section level3">
 <h3>Notes and Materials</h3>
 <ul>
 <li>Lec 07: Inference on Categorical Data <a href="notes/lec07_CategoricalDataAnalysis.pdf">[PDF]</a><a href="notes/lec07_CategoricalDataAnalysis.html">[HTML]</a></li>
+</ul>
+<div id="on-your-own---review-of-tests-for-one-and-two-sample-proportions-before-monday" class="section level5">
+<h5>On Your Own - Review of tests for one and two sample proportions (Before Monday)</h5>
+<ul>
+<li>OpenIntro Statistics <a href="https://www.openintro.org/stat/textbook.php">Free PDF Textbook</a> Chapter 6 &amp; 7</li>
 <li>Open Intro Lab on categorical data <a href="notes/OI_Inf_for_categorical_data/html">[HTML]</a></li>
 </ul>
+</div>
 </div>
 <div id="monday-32116" class="section level3">
 <h3>Monday 3/21/16</h3>
 <ul>
-<li>Inference on Categorical data via <a href="OI_Inf_for_categorical_data/html">Open Intro Lab</a></li>
+<li>Review notes on one and two sample proportions. <span style="color:red">If there are no questions or discussion then we will start with contingency tables.</span></li>
 </ul>
 </div>
 <div id="wednesday-32316" class="section level3">
 <h3>Wednesday 3/23/16</h3>
 <ul>
-<li>Contingency tables and Odds Ratios</li>
-<li>Chi-squared test of association</li>
-<li>Chi-squared test of independence</li>
+<li>Contingency tables and Measures of association</li>
 </ul>
 </div>
 <div id="friday-32516" class="section level3">
