split logreg away from CDA start wk10 overview for logreg update wk09 overview to add early lab finish notes up to tests of association

--- a/wk09.html
+++ b/wk09.html
@@ -150,7 +150,7 @@ border: 1px solid black;}
 <div id="friday-32516" class="section level3">
 <h3>Friday 3/25/16</h3>
 <ul>
-<li><p>Discuss Discrimenant Analysis</p></li>
+<li><p>Exam and project discussion</p></li>
 <li><p><strong>Extra Credit</strong> Attend the Department colloqium talk from 3-4pm.<br />
  Dr. Matt Jans from the UCLA Center for Health Policy Research is here to give a talk titled <strong><em>“Item missing data and potential miscategorization with sexual orientation and partner sex questions: Language and cultural differences”</em></strong></p></li>
 </ul>
@@ -158,6 +158,13 @@ border: 1px solid black;}
 </div>
 <div id="looking-ahead" class="section level2">
 <h2>Looking Ahead</h2>
+<ul>
+<li>Categorical Data Analysis - Prepare for Monday’s lecture by
+<ul>
+<li>Review OpenIntro Statistics <a href="https://www.openintro.org/stat/textbook.php">Free PDF Textbook</a> Chapter 6 &amp; 7</li>
+<li>Go through this Open Intro Lab on categorical data <a href="notes/OI_Inf_for_categorical_data/html">[HTML]</a> (Uses the <code>openintro</code> package)</li>
+</ul></li>
+</ul>
 </div>
 
 
