--- a/wk10.html
+++ b/wk10.html
@@ -138,20 +138,24 @@ border: 1px solid black;}
 <h5>On Your Own - Review of tests for one and two sample proportions (Before Monday)</h5>
 <ul>
 <li>OpenIntro Statistics <a href="https://www.openintro.org/stat/textbook.php">Free PDF Textbook</a> Chapter 6 &amp; 7</li>
-<li>Open Intro Lab on categorical data <a href="notes/OI_Inf_for_categorical_data/html">[HTML]</a></li>
+<li>Open Intro Lab on categorical data <a href="notes/OI_Inf_for_categorical_data/html">[HTML]</a>
+<ul>
+<li>You must have the <code>openintro</code> package installed.</li>
+</ul></li>
 </ul>
 </div>
 </div>
 <div id="monday-32116" class="section level3">
 <h3>Monday 3/21/16</h3>
 <ul>
-<li>Review notes on one and two sample proportions. <span style="color:red">If there are no questions or discussion then we will start with contingency tables.</span></li>
+<li>Review notes on one and two sample proportions.</li>
+<li><span style="color:red">If there are no questions or discussion then we will start with contingency tables.</span></li>
 </ul>
 </div>
 <div id="wednesday-32316" class="section level3">
 <h3>Wednesday 3/23/16</h3>
 <ul>
-<li>Contingency tables and Measures of association</li>
+<li>Contingency tables and measures of association</li>
 </ul>
 </div>
 <div id="friday-32516" class="section level3">
