--- a/Schedule.html
+++ b/Schedule.html
@@ -339,7 +339,7 @@ table {
 <tr class="odd">
 <td align="left">03/25</td>
 <td align="left">F</td>
-<td align="left">wk09: Exam &amp; project discussion</td>
+<td align="left">wk09: Exam discussion</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -353,21 +353,21 @@ table {
 <tr class="odd">
 <td align="left">03/28</td>
 <td align="left">M</td>
-<td align="left"><a href="wk10.html">wk10:</a> Inference on Categorical Data</td>
-<td align="left"><a href="notes/lec07_CategoricalDataAnalysis.html">lec07_CategoricalDataAnalysis</a></td>
+<td align="left"><a href="wk10.html">wk10:</a> PCA practice</td>
+<td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">03/30</td>
 <td align="left">W</td>
-<td align="left"><a href="wk10.html">wk10:</a> Contingency tables and Odds Ratios</td>
-<td align="left">-</td>
+<td align="left"><a href="wk10.html">wk10:</a> Inference on Categorical Data</td>
+<td align="left"><a href="notes/lec07_CategoricalDataAnalysis.html">lec07_CategoricalDataAnalysis</a></td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/01</td>
 <td align="left">F</td>
-<td align="left">wk10: CDA Classwork</td>
+<td align="left">wk10: Contingency tables and Odds Ratios</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -376,27 +376,27 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">HW: Categorical data</td>
+<td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/04</td>
 <td align="left">M</td>
-<td align="left">wk11: Logistic Regression - Model building</td>
-<td align="left">lec08_LogisticRegression</td>
+<td align="left">wk11: M&amp;M Experiment</td>
 <td align="left">-</td>
+<td align="left">HW: Categorical data</td>
 </tr>
 <tr class="even">
 <td align="left">04/06</td>
 <td align="left">W</td>
-<td align="left">wk11: Logistic Regression - As a classifier</td>
-<td align="left">-</td>
+<td align="left">wk11: Logistic Regression - Model building &amp; Interpretation</td>
+<td align="left">lec08_LogisticRegression</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/08</td>
 <td align="left">F</td>
-<td align="left">wk11: Logistic Regression Classwork</td>
-<td align="left">-</td>
+<td align="left">wk11: Logistic regression classwork</td>
+<td align="left">Afifi Ch 12</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
@@ -404,26 +404,26 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Quiz: Logistic Regression</td>
+<td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/11</td>
 <td align="left">M</td>
-<td align="left">wk12: Classifiers - Discriminant analysis</td>
+<td align="left">wk12: Classifiers - Introduction, Project 2 Introduction</td>
 <td align="left">lec09_Classifiers</td>
-<td align="left">-</td>
+<td align="left">Quiz: Logistic Regression</td>
 </tr>
 <tr class="even">
 <td align="left">04/13</td>
 <td align="left">W</td>
-<td align="left">wk12: Discriminant analysis classwork</td>
+<td align="left">wk12: Classifiers - Logistic Regression</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/15</td>
 <td align="left">F</td>
-<td align="left">wk12: Classifiers - CART / Random Forests</td>
+<td align="left">wk12: Classifiers - Linear Discriminant analysis</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -432,82 +432,82 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">HW: Discriminant Analysis</td>
+<td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/18</td>
 <td align="left">M</td>
-<td align="left">wk13: CART classwork, Project 2 Introduction</td>
+<td align="left">wk13: Classifiers - Decision Trees / Random Forests</td>
 <td align="left">-</td>
-<td align="left">-</td>
+<td align="left">HW: Classifiers</td>
 </tr>
 <tr class="even">
 <td align="left">04/20</td>
 <td align="left">W</td>
-<td align="left">wk13: Classifiers - Cluster analysis</td>
+<td align="left">wk13: Practice with classifiers</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/22</td>
 <td align="left">F</td>
-<td align="left">wk13: Cluster analysis classwork</td>
+<td align="left">wk13: Practice with classifiers</td>
 <td align="left">-</td>
-<td align="left">-</td>
+<td align="left">Project 2 Draft Due</td>
 </tr>
 <tr class="even">
 <td align="left">04/24</td>
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Quiz: Classifiers (CART, cluster analysis)</td>
+<td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/25</td>
 <td align="left">M</td>
-<td align="left">wk14: Classifiers - k-means</td>
-<td align="left">-</td>
-<td align="left">-</td>
+<td align="left">wk14: Missing Data - Identification and Imputations</td>
+<td align="left">Afifi Ch 9.2, Harrell Ch3</td>
+<td align="left">Quiz: Classifiers, Project 2 Draft Peer Review</td>
 </tr>
 <tr class="even">
 <td align="left">04/27</td>
 <td align="left">W</td>
-<td align="left">wk14: k-means classwork</td>
+<td align="left">wk14: Missing Data - MICE</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/29</td>
 <td align="left">F</td>
-<td align="left">wk14: Missing Data - Identification and Imputations</td>
-<td align="left">Afifi Ch 9.2, Harrell Ch3</td>
-<td align="left">Project 2 Draft Due</td>
+<td align="left">wk14: Missing data classwork</td>
+<td align="left">-</td>
+<td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">05/01</td>
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Project 2 Draft - Peer review Due</td>
+<td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">05/02</td>
 <td align="left">M</td>
-<td align="left">wk15: Missing Data - MICE</td>
 <td align="left">-</td>
 <td align="left">-</td>
+<td align="left">HW: Missing Data</td>
 </tr>
 <tr class="even">
 <td align="left">05/04</td>
 <td align="left">W</td>
-<td align="left">wk15: Missing data classwork</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">05/06</td>
 <td align="left">F</td>
-<td align="left">wk15: Missing data classwork</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -516,26 +516,33 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Quiz</td>
+<td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">05/09</td>
 <td align="left">M</td>
-<td align="left">wk16: Project 2 working time</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">05/11</td>
 <td align="left">W</td>
-<td align="left">wk16: Project 2 working time</td>
+<td align="left">wk16: Exam Review</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">05/13</td>
 <td align="left">F</td>
-<td align="left">wk16: Exam Review</td>
+<td align="left">wk16: Final exam - In class portion?</td>
+<td align="left">-</td>
+<td align="left">-</td>
+</tr>
+<tr class="even">
+<td align="left">05/20</td>
+<td align="left">F</td>
+<td align="left">Final exam - take home portion?</td>
 <td align="left">-</td>
 <td align="left">Project 2 Final Report</td>
 </tr>
