--- a/wk10.html
+++ b/wk10.html
@@ -134,30 +134,30 @@ border: 1px solid black;}
 <ul>
 <li>Lec 07: Inference on Categorical Data <a href="notes/lec07_CategoricalDataAnalysis.pdf">[PDF]</a><a href="notes/lec07_CategoricalDataAnalysis.html">[HTML]</a></li>
 </ul>
-<div id="on-your-own---review-of-tests-for-one-sample-proportions-before-monday" class="section level5">
-<h5>On Your Own - Review of tests for one sample proportions (Before Monday)</h5>
+</div>
+<div id="monday-32116" class="section level3">
+<h3>Monday 3/21/16</h3>
+<ul>
+<li>PCA Practice (Afifi 14.11)</li>
+</ul>
+<div id="on-your-own---review-of-tests-for-one-sample-proportions-before-wednesday" class="section level5">
+<h5>On Your Own - Review of tests for one sample proportions (Before Wednesday)</h5>
 <ul>
 <li>OpenIntro Statistics <a href="https://www.openintro.org/stat/textbook.php">Free PDF Textbook</a> Chapter 6</li>
 <li>Open Intro Lab on categorical data <a href="notes/OI_Inf_for_categorical_data/html">[HTML]</a> (Uses the <code>openintro</code> package)</li>
 </ul>
 </div>
 </div>
-<div id="monday-32116" class="section level3">
-<h3>Monday 3/21/16</h3>
-<ul>
-<li>Review one and two sample proportions.</li>
-</ul>
-</div>
 <div id="wednesday-32316" class="section level3">
 <h3>Wednesday 3/23/16</h3>
 <ul>
-<li>Contingency tables and measures of association</li>
+<li>Review one and two sample proportions.</li>
 </ul>
 </div>
 <div id="friday-32516" class="section level3">
 <h3>Friday 3/25/16</h3>
 <ul>
-<li>Work on on your own questions</li>
+<li>Contingency tables and measures of association</li>
 </ul>
 </div>
 </div>
@@ -165,7 +165,6 @@ border: 1px solid black;}
 <h2>Looking Ahead</h2>
 <ul>
 <li>Logistic Regression</li>
-<li>Classifiers</li>
 </ul>
 </div>
 
