Add PCA worksheet

--- a/Schedule.html
+++ b/Schedule.html
@@ -354,7 +354,7 @@ table {
 <td align="left">03/28</td>
 <td align="left">M</td>
 <td align="left"><a href="wk10.html">wk10:</a> PCA practice</td>
-<td align="left">-</td>
+<td align="left"><a href="notes/PCA_worksheet.html">PCA_worksheet</a></td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
