--- a/Schedule.html
+++ b/Schedule.html
@@ -383,19 +383,19 @@ table {
 <td align="left">M</td>
 <td align="left">wk11: M&amp;M Experiment</td>
 <td align="left">-</td>
-<td align="left">HW: Categorical data</td>
+<td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">04/06</td>
 <td align="left">W</td>
-<td align="left">wk11: Logistic Regression - Model building &amp; Interpretation</td>
+<td align="left">wk11: Logistic Regression - Introduction</td>
 <td align="left">lec08_LogisticRegression</td>
-<td align="left">-</td>
+<td align="left">HW: Categorical data</td>
 </tr>
 <tr class="odd">
 <td align="left">04/08</td>
 <td align="left">F</td>
-<td align="left">wk11: Logistic regression classwork</td>
+<td align="left">wk11: Logistic regression - Interpretation and model fitting</td>
 <td align="left">Afifi Ch 12</td>
 <td align="left">-</td>
 </tr>
@@ -404,147 +404,147 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">-</td>
+<td align="left">Quiz: Logistic Regression</td>
 </tr>
 <tr class="odd">
 <td align="left">04/11</td>
 <td align="left">M</td>
-<td align="left">wk12: Classifiers - Introduction, Project 2 Introduction</td>
-<td align="left">lec09_Classifiers</td>
-<td align="left">Quiz: Logistic Regression</td>
+<td align="left">wk12: Logistic Regression, Project 2 Introduction</td>
+<td align="left">-</td>
+<td align="left">-</td>
 </tr>
 <tr class="even">
-<td align="left">04/13</td>
-<td align="left">W</td>
-<td align="left">wk12: Classifiers - Logistic Regression</td>
+<td align="left">04/12</td>
+<td align="left">T</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
-<td align="left">04/15</td>
-<td align="left">F</td>
-<td align="left">wk12: Classifiers - Linear Discriminant analysis</td>
+<td align="left">04/13</td>
+<td align="left">W</td>
+<td align="left">wk12: <span style="color:red">Classes Canceled due to Strike</span></td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
-<td align="left">04/17</td>
-<td align="left">Su</td>
-<td align="left">-</td>
+<td align="left">04/15</td>
+<td align="left">F</td>
+<td align="left">wk12: <span style="color:red">Classes Canceled due to Strike</span></td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/18</td>
 <td align="left">M</td>
-<td align="left">wk13: Classifiers - Decision Trees / Random Forests</td>
+<td align="left">wk13: <span style="color:red">Classes Canceled due to Strike</span></td>
 <td align="left">-</td>
-<td align="left">HW: Classifiers</td>
+<td align="left">-</td>
 </tr>
 <tr class="even">
+<td align="left">04/19</td>
+<td align="left">T</td>
+<td align="left">-</td>
+<td align="left">-</td>
+<td align="left">Project 2 - Check in I</td>
+</tr>
+<tr class="odd">
 <td align="left">04/20</td>
 <td align="left">W</td>
-<td align="left">wk13: Practice with classifiers</td>
+<td align="left">wk13: Classifiers - Introduction</td>
+<td align="left">lec09_Classifiers</td>
+<td align="left">-</td>
+</tr>
+<tr class="even">
+<td align="left">04/22</td>
+<td align="left">F</td>
+<td align="left">wk13: Classifiers - NB, LogReg, SVM</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
-<td align="left">04/22</td>
-<td align="left">F</td>
-<td align="left">wk13: Practice with classifiers</td>
-<td align="left">-</td>
-<td align="left">Project 2 Draft Due</td>
-</tr>
-<tr class="even">
 <td align="left">04/24</td>
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">-</td>
+<td align="left">HW: Classifiers</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">04/25</td>
 <td align="left">M</td>
-<td align="left">wk14: Missing Data - Identification and Imputations</td>
-<td align="left">Afifi Ch 9.2, Harrell Ch3</td>
-<td align="left">Quiz: Classifiers, Project 2 Draft Peer Review</td>
-</tr>
-<tr class="even">
-<td align="left">04/27</td>
-<td align="left">W</td>
-<td align="left">wk14: Missing Data - MICE</td>
+<td align="left">wk14: Assessing model fit - ROC, AUC, Sensitivity/Specificity</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
-<td align="left">04/29</td>
-<td align="left">F</td>
-<td align="left">wk14: Missing data classwork</td>
+<td align="left">04/27</td>
+<td align="left">W</td>
+<td align="left">wk14: Practice with classifiers</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
-<td align="left">05/01</td>
-<td align="left">Su</td>
-<td align="left">-</td>
+<td align="left">04/29</td>
+<td align="left">F</td>
+<td align="left">wk14: More classifiers - Decision Trees, RF, KNN</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">05/02</td>
 <td align="left">M</td>
+<td align="left">wk15: Work on project 2</td>
 <td align="left">-</td>
-<td align="left">-</td>
-<td align="left">HW: Missing Data</td>
+<td align="left">Project 2 Draft Due</td>
 </tr>
 <tr class="even">
 <td align="left">05/04</td>
 <td align="left">W</td>
-<td align="left">-</td>
+<td align="left">wk15: Wrap up classifiers</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">05/06</td>
 <td align="left">F</td>
+<td align="left">wk15: Missing Data: Identification and Imputation</td>
 <td align="left">-</td>
-<td align="left">-</td>
-<td align="left">-</td>
+<td align="left">Project 2 Draft Peer Review</td>
 </tr>
 <tr class="even">
-<td align="left">05/08</td>
-<td align="left">Su</td>
-<td align="left">-</td>
+<td align="left">05/09</td>
+<td align="left">M</td>
+<td align="left">wk16: Missing Data: MICE</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
-<td align="left">05/09</td>
-<td align="left">M</td>
-<td align="left">-</td>
-<td align="left">-</td>
-<td align="left">-</td>
-</tr>
-<tr class="even">
 <td align="left">05/11</td>
 <td align="left">W</td>
 <td align="left">wk16: Exam Review</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">05/13</td>
 <td align="left">F</td>
-<td align="left">wk16: Final exam - In class portion?</td>
 <td align="left">-</td>
 <td align="left">-</td>
+<td align="left">Final Exam - In class portion</td>
+</tr>
+<tr class="odd">
+<td align="left">05/18</td>
+<td align="left">W</td>
+<td align="left">Finals Week</td>
+<td align="left">-</td>
+<td align="left">Project 2 Final Report</td>
 </tr>
 <tr class="even">
 <td align="left">05/20</td>
 <td align="left">F</td>
-<td align="left">Final exam - take home portion?</td>
+<td align="left">Finals Week</td>
 <td align="left">-</td>
-<td align="left">Project 2 Final Report</td>
+<td align="left">Final Exam - Take home portion</td>
 </tr>
 </tbody>
 </table>
