add announcement to wk11

--- a/wk11.html
+++ b/wk11.html
@@ -129,6 +129,7 @@ border: 1px solid black;}
 <p><a href="Schedule.html">[Schedule]</a> <a href="wk10.html">[Week 10]</a> <a href="wk12.html">[Week 12]</a></p>
 <div id="announcements" class="section level2">
 <h2>Announcements</h2>
+<p>The schedule has been updated to reflect upcoming due dates, and the change in plans if the strike does happen.</p>
 <div id="notes-and-materials" class="section level3">
 <h3>Notes and Materials</h3>
 <ul>
@@ -137,9 +138,7 @@ border: 1px solid black;}
 </div>
 <div id="monday-040416" class="section level3">
 <h3>Monday 04/04/16</h3>
-<ul>
-<li>Chi Square Tests: M&amp;M Experiment.<a href="notes/MnM_Experiment.Rmd">[RMD]</a> <a href="notes/MnM_Experiment.pdf">[PDF]</a> <a href="notes/MnM_Experiment.html">[HTML]</a></li>
-</ul>
+<p>** Prepare before class - review the relevant materials and complete the preparation section** * Chi Square Tests: M&amp;M Experiment.<a href="notes/MnM_Experiment.Rmd">[RMD]</a> <a href="notes/MnM_Experiment.pdf">[PDF]</a> <a href="notes/MnM_Experiment.html">[HTML]</a></p>
 </div>
 <div id="wednesday-040616" class="section level3">
 <h3>Wednesday 04/06/16</h3>
