add wk11 to schedule

--- a/wk11.html
+++ b/wk11.html
@@ -138,7 +138,7 @@ border: 1px solid black;}
 </div>
 <div id="monday-040416" class="section level3">
 <h3>Monday 04/04/16</h3>
-<p>** Prepare before class - review the relevant materials and complete the preparation section** * Chi Square Tests: M&amp;M Experiment.<a href="notes/MnM_Experiment.Rmd">[RMD]</a> <a href="notes/MnM_Experiment.pdf">[PDF]</a> <a href="notes/MnM_Experiment.html">[HTML]</a></p>
+<p><strong>Prepare before class - review the relevant materials and complete the preparation section</strong><br />* Chi Square Tests: M&amp;M Experiment.<a href="notes/MnM_Experiment.Rmd">[RMD]</a> <a href="notes/MnM_Experiment.pdf">[PDF]</a> <a href="notes/MnM_Experiment.html">[HTML]</a></p>
 </div>
 <div id="wednesday-040616" class="section level3">
 <h3>Wednesday 04/06/16</h3>
