--- a/Schedule.html
+++ b/Schedule.html
@@ -409,63 +409,49 @@ table {
 <tr class="odd">
 <td align="left">04/11</td>
 <td align="left">M</td>
-<td align="left">wk12: Project 2 Introduction, logistic regression classwork.</td>
+<td align="left">wk12: Project 2 Introduction</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
-<td align="left">04/12</td>
-<td align="left">T</td>
-<td align="left">-</td>
-<td align="left">-</td>
-<td align="left">-</td>
-</tr>
-<tr class="odd">
 <td align="left">04/13</td>
 <td align="left">W</td>
-<td align="left">wk12: <span style="color:red">Classes Canceled due to Strike</span></td>
-<td align="left">-</td>
-<td align="left">-</td>
-</tr>
-<tr class="even">
-<td align="left">04/15</td>
-<td align="left">F</td>
-<td align="left">wk12: <span style="color:red">Classes Canceled due to Strike</span></td>
+<td align="left">wk12: Assessing model fit - CV, ROC, AUC, Sensitivity/Specificity</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
+<td align="left">04/15</td>
+<td align="left">F</td>
+<td align="left">-</td>
+<td align="left">-</td>
+<td align="left">Project 2 Check in I (EOD)</td>
+</tr>
+<tr class="even">
 <td align="left">04/17</td>
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Quiz: Logistic Regression</td>
-</tr>
-<tr class="even">
-<td align="left">04/18</td>
-<td align="left">M</td>
-<td align="left">wk13: <span style="color:red">Classes Canceled due to Strike</span></td>
-<td align="left">-</td>
-<td align="left">-</td>
+<td align="left">Quiz: Model Fit</td>
 </tr>
 <tr class="odd">
-<td align="left">04/19</td>
-<td align="left">T</td>
+<td align="left">04/18</td>
+<td align="left">M</td>
+<td align="left">wk13: Classifiers - Introduction (Logistic, NB, LDA, SVM?)</td>
+<td align="left">lec09_Classifiers</td>
 <td align="left">-</td>
-<td align="left">-</td>
-<td align="left">Project 2 - Check in I</td>
 </tr>
 <tr class="even">
 <td align="left">04/20</td>
 <td align="left">W</td>
-<td align="left">wk13: Classifiers - Introduction</td>
-<td align="left">lec09_Classifiers</td>
+<td align="left">-</td>
+<td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/22</td>
 <td align="left">F</td>
-<td align="left">wk13: Classifiers - NB, LogReg, SVM</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -474,84 +460,91 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">HW: Classifiers</td>
+<td align="left">Quiz: Classifiers</td>
 </tr>
 <tr class="odd">
 <td align="left">04/25</td>
 <td align="left">M</td>
-<td align="left">wk14: Assessing model fit - ROC, AUC, Sensitivity/Specificity</td>
+<td align="left">wk14: Classifiers - Decision trees, RF, KNN</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">04/27</td>
 <td align="left">W</td>
-<td align="left">wk14: Practice with classifiers</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/29</td>
 <td align="left">F</td>
-<td align="left">wk14: More classifiers - Decision Trees, RF, KNN</td>
 <td align="left">-</td>
 <td align="left">-</td>
+<td align="left">Project 2 Draft Due (EOD)</td>
 </tr>
 <tr class="even">
 <td align="left">05/02</td>
 <td align="left">M</td>
-<td align="left">wk15: Work on project 2</td>
+<td align="left">wk15: Missing Data: Identification and Imputation</td>
 <td align="left">-</td>
-<td align="left">Project 2 Draft Due</td>
+<td align="left">Project 2 Draft Peer Review (EOD)</td>
 </tr>
 <tr class="odd">
 <td align="left">05/04</td>
 <td align="left">W</td>
-<td align="left">wk15: Wrap up classifiers</td>
+<td align="left">wk15: Missing Data: MICE</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">05/06</td>
 <td align="left">F</td>
-<td align="left">wk15: Missing Data: Identification and Imputation</td>
 <td align="left">-</td>
-<td align="left">Project 2 Draft Peer Review</td>
+<td align="left">-</td>
+<td align="left">-</td>
 </tr>
 <tr class="odd">
+<td align="left">05/08</td>
+<td align="left">Su</td>
+<td align="left">-</td>
+<td align="left">-</td>
+<td align="left">Quiz: Missing Data</td>
+</tr>
+<tr class="even">
 <td align="left">05/09</td>
 <td align="left">M</td>
-<td align="left">wk16: Missing Data: MICE</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">05/11</td>
 <td align="left">W</td>
 <td align="left">wk16: Exam Review</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">05/13</td>
 <td align="left">F</td>
 <td align="left">-</td>
 <td align="left">-</td>
 <td align="left">Final Exam - In class portion</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">05/18</td>
 <td align="left">W</td>
 <td align="left">Finals Week</td>
 <td align="left">-</td>
-<td align="left">Project 2 Final Report</td>
+<td align="left">Project 2 Final Report (EOD)</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">05/20</td>
 <td align="left">F</td>
 <td align="left">Finals Week</td>
 <td align="left">-</td>
-<td align="left">Final Exam - Take home portion</td>
+<td align="left">Final Exam - Take home portion (2pm)</td>
 </tr>
 </tbody>
 </table>
