work on lec09 remove from wk12 notes

--- a/Schedule.html
+++ b/Schedule.html
@@ -409,21 +409,21 @@ table {
 <tr class="odd">
 <td align="left">04/11</td>
 <td align="left">M</td>
-<td align="left">-</td>
+<td align="left"><a href="wk12.html">wk12:</a> Introduction to Classification</td>
 <td align="left"><a href="notes/ClassifyingProject.html">ClassifyingProject</a></td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">04/13</td>
 <td align="left">W</td>
-<td align="left">wk12: Assessing model fit - Accuracy +</td>
+<td align="left"><a href="wk12.html">wk12:</a> Assessing model fit</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/15</td>
 <td align="left">F</td>
-<td align="left">wk12: Assessing model fit - AUC, ROC, Revisiting CV</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">Project Approval</td>
 </tr>
@@ -438,7 +438,7 @@ table {
 <td align="left">04/18</td>
 <td align="left">M</td>
 <td align="left">wk13: Classifiers - Logistic, LDA, NB</td>
-<td align="left">lec09_Classifiers</td>
+<td align="left">lec10_Classifiers</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
@@ -487,7 +487,7 @@ table {
 <td align="left">05/02</td>
 <td align="left">M</td>
 <td align="left">wk15: Missing Data: Identification and Imputation</td>
-<td align="left">-</td>
+<td align="left">lec11_MissingData</td>
 <td align="left">Project 2 Draft Peer Review (EOD)</td>
 </tr>
 <tr class="odd">
