--- a/Schedule.html
+++ b/Schedule.html
@@ -409,7 +409,7 @@ table {
 <tr class="odd">
 <td align="left">04/11</td>
 <td align="left">M</td>
-<td align="left"><a href="wk12.html">wk12:</a> Introduction to Classification</td>
+<td align="left"><a href="wk12.html">wk12:</a> Introduction to Project 2</td>
 <td align="left"><a href="notes/ClassifyingProject.html">ClassifyingProject</a></td>
 <td align="left">-</td>
 </tr>
@@ -417,14 +417,14 @@ table {
 <td align="left">04/13</td>
 <td align="left">W</td>
 <td align="left"><a href="wk12.html">wk12:</a> Assessing model fit</td>
-<td align="left">-</td>
+<td align="left"><a href="notes/lec09_PredictiveFit.html">lec09_PredictiveFit</a></td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">04/15</td>
 <td align="left">F</td>
 <td align="left">-</td>
-<td align="left">-</td>
+<td align="left">Afifi Ch 12.8</td>
 <td align="left">Project Approval</td>
 </tr>
 <tr class="even">
