lec 10 ok for wk 13, add hw solutions, rebuild schedule

--- a/HW_Info.html
+++ b/HW_Info.html
@@ -134,6 +134,8 @@ border: 1px solid black;}
 <li>Multiple Linear regression <a href="notes/solutions/MLR_solutions.html">MLR_solutions</a></li>
 <li>Plotting help for spline predictions <a href="notes/solutions/Lec04_solutions.html">Lec04_solutions</a></li>
 <li>My model building <a href="notes/solutions/VariableSelection_solutions.html">VariableSelection_solutions</a></li>
+<li>M &amp; M Experiment <a href="notes/solutions/MnM_Experiment_S16_Solutions.html">MnM_Experiment_S16_Solutions</a></li>
+<li>Logistic Regression <a href="notes/solutions/LogReg_Solutions.html">LogReg_Solutions</a></li>
 </ul>
 </div>
 <div id="how-to-submit-homework" class="section level2">
