update wk14 recompile schedule and lec10

--- a/Schedule.html
+++ b/Schedule.html
@@ -438,7 +438,7 @@ table {
 <td align="left">04/18</td>
 <td align="left">M</td>
 <td align="left"><a href="wk13.html">wk13:</a> Classifiers - Logistic, LDA, NB</td>
-<td align="left"><a href="notes/lec10_Classifiers.html">lec10_Classifiers</a></td>
+<td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
@@ -465,7 +465,7 @@ table {
 <tr class="odd">
 <td align="left">04/25</td>
 <td align="left">M</td>
-<td align="left">wk14: Classifiers - Decision trees, RF, KNN</td>
+<td align="left"><a href="wk14.html">wk14:</a> Classifiers - Decision trees, RF, KNN</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -488,7 +488,7 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Quiz: Classifiers</td>
+<td align="left">HW: Classifiers</td>
 </tr>
 <tr class="odd">
 <td align="left">05/02</td>
@@ -500,7 +500,7 @@ table {
 <tr class="even">
 <td align="left">05/04</td>
 <td align="left">W</td>
-<td align="left">wk15: Missing Data: MICE</td>
+<td align="left">wk15: Missing Data: Multiple Imputation using Chained Equations</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
