add lec11 and wk 15

--- a/Schedule.html
+++ b/Schedule.html
@@ -541,14 +541,14 @@ table {
 <tr class="odd">
 <td align="left">05/02</td>
 <td align="left">M</td>
-<td align="left">wk15: Missing Data: Identification and Imputation</td>
-<td align="left">lec11_MissingData</td>
+<td align="left"><a href="wk15.html">wk15: Missing Data:</a> Identification and Issues</td>
+<td align="left"><a href="notes/lec11_MissingData.html">lec11_MissingData</a></td>
 <td align="left">Project 2 Draft Peer Review (EOD)</td>
 </tr>
 <tr class="even">
 <td align="left">05/04</td>
 <td align="left">W</td>
-<td align="left">wk15: Missing Data: Multiple Imputation using Chained Equations</td>
+<td align="left">wk15: Missing Data: Imputation Methods</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -569,7 +569,7 @@ table {
 <tr class="odd">
 <td align="left">05/09</td>
 <td align="left">M</td>
-<td align="left">wk16: Project work time</td>
+<td align="left">wk16: Free Work Time</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -583,7 +583,7 @@ table {
 <tr class="odd">
 <td align="left">05/13</td>
 <td align="left">F</td>
-<td align="left">-</td>
+<td align="left">wk16: Final Exam (In class portion)</td>
 <td align="left">-</td>
 <td align="left">Final Exam - In class portion</td>
 </tr>
