--- a/wk15.html
+++ b/wk15.html
@@ -180,18 +180,18 @@ border: 1px solid black;}
 </div>
 <div id="notes-and-code" class="section level2">
 <h2>Notes and Code</h2>
-<p><a href="notes/lec11_MissingData.pdf">[PDF]</a><a href="notes/lec11_MissingData.html">[HTML]</a></p>
+<p>Lecture 11: Missing Data <a href="notes/lec11_MissingData.pdf">[PDF]</a><a href="notes/lec11_MissingData.html">[HTML]</a></p>
 <div id="monday" class="section level3">
 <h3>Monday</h3>
 <p>Introduction to Missing Data: Terminology and problems</p>
 </div>
 <div id="wednesday" class="section level3">
 <h3>Wednesday</h3>
-<p>General strategies for handling missing data</p>
+<p>Multiple Imputation using Chained Equations</p>
 </div>
 <div id="friday" class="section level3">
 <h3>Friday</h3>
-<p>Imputation methods in using R [Notes will be finished by then]</p>
+<p>Classwork</p>
 </div>
 </div>
 <div id="looking-ahead" class="section level2">
