--- a/Schedule.html
+++ b/Schedule.html
@@ -548,14 +548,14 @@ table {
 <tr class="even">
 <td align="left">05/04</td>
 <td align="left">W</td>
-<td align="left">wk15: Missing Data: Imputation Methods</td>
+<td align="left"><a href="wk15.html">wk15: Missing Data:</a> Imputation Methods</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">05/06</td>
 <td align="left">F</td>
-<td align="left">-</td>
+<td align="left">wk15: Practice with Missing Data</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
