--- a/Schedule.html
+++ b/Schedule.html
@@ -555,7 +555,7 @@ table {
 <tr class="odd">
 <td align="left">05/06</td>
 <td align="left">F</td>
-<td align="left">wk15: Practice with Missing Data</td>
+<td align="left"><a href="wk15.html">wk15:</a> Practice with Missing Data</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -569,21 +569,21 @@ table {
 <tr class="odd">
 <td align="left">05/09</td>
 <td align="left">M</td>
-<td align="left">wk16: Free Work Time</td>
+<td align="left"><a href="wk16.html">wk16:</a> Free Work Time</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">05/11</td>
 <td align="left">W</td>
-<td align="left">wk16: Exam Review</td>
+<td align="left"><a href="wk16.html">wk16:</a> Exam Review</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">05/13</td>
 <td align="left">F</td>
-<td align="left">wk16: Final Exam (In class portion)</td>
+<td align="left"><a href="wk16.html">wk16:</a> Final Exam (In class portion)</td>
 <td align="left">-</td>
 <td align="left">Final Exam - In class portion</td>
 </tr>
